# DEZOO

./: CHANGELOG.md  README.md  pyproject.toml
src/demal_package/: __init__.py  main.py
src/dezoo_package/: __init__.py  main.py
test/: test_usage.py
