[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demal"
version = "1.0.0"
description = "Package that keeps your debugging error FUN"
readme = "README.md"
authors = [
    { name="Matthew Henrich"}
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "simpleaudio"
]
keywords = ["demal", "debugging", "animal", "sound", "effects", "sound effects", "sound-effects"]
requires-python = ">=3.14"

[project.optional-dependencies]
devel = [
    "wheel",
    "requests",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/mhennn/demal-package"