[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dezoo"
version = "1.0.2"
description = "Package that keeps your debugging error FUN"
readme = "README.md"
authors = [
    { name="Matthew Henrich"}
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "simpleaudio"
]
keywords = ["dezoo", "debugging", "animal", "sound", "effects", "sound effects", "sound-effects"]
requires-python = ">=3.14"

[project.optional-dependencies]
devel = [
    "wheel",
    "requests",
    "pytest",
    "twine"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dezoo_package = ["media/*.wav"]

[project.urls]
Homepage = "https://github.com/mhennn/dezoo"